finished test cases
