# api/swagger/swagger.yaml
@@ -1,194 +1,194 @@
 ---
   swagger: "2.0"
-  info:
+  info: 
     version: "0.0.2"
     title: "STRB addressbook Api"
   host: "localhost:3010"
   basePath: "/api"
-  schemes:
+  schemes: 
     - "http"
-  tags:
-    -
+  tags: 
+    - 
       name: "users"
       description: "Users operations"
-    -
+    - 
       name: "contacts"
       description: "Contacts operations"
-  consumes:
+  consumes: 
     - "application/json"
-  produces:
+  produces: 
     - "application/json"
-  paths:
-    /users/signup:
+  paths: 
+    /users/signup: 
       x-swagger-router-controller: "features/users/controllers/users"
-      post:
+      post: 
         description: "Register a user to manage cantacts"
         summary: "Register a user to manage cantacts"
-        consumes:
+        consumes: 
           - "application/json"
         operationId: "registerUser"
-        tags:
+        tags: 
           - "users"
-        parameters:
-          -
+        parameters: 
+          - 
             name: "user"
             in: "body"
             description: "User to be registered"
             required: true
-            schema:
-              required:
+            schema: 
+              required: 
                 - "email"
                 - "password"
-              properties:
-                email:
+              properties: 
+                email: 
                   type: "string"
-                password:
+                password: 
                   type: "string"
-                name:
+                name: 
                   type: "string"
-        responses:
-          200:
+        responses: 
+          200: 
             description: "Success"
-            schema:
-              required:
+            schema: 
+              required: 
                 - "data"
-              properties:
-                data:
+              properties: 
+                data: 
                   $ref: "#/definitions/User"
-          400:
+          400: 
             description: "Bad request"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-    /users/login:
+    /users/login: 
       x-swagger-router-controller: "features/users/controllers/users"
-      post:
+      post: 
         operationId: "loginUser"
-        tags:
+        tags: 
           - "users"
         description: "Get the token of the logged in user"
-        parameters:
-          -
+        parameters: 
+          - 
             name: "user"
             in: "body"
             description: "User to be logged in"
             required: true
-            schema:
-              required:
+            schema: 
+              required: 
                 - "email"
                 - "password"
-              properties:
-                email:
+              properties: 
+                email: 
                   type: "string"
-                password:
+                password: 
                   type: "string"
-                name:
+                name: 
                   type: "string"
-        responses:
-          200:
+        responses: 
+          200: 
             description: "Success"
-            schema:
-              required:
+            schema: 
+              required: 
                 - "data"
-              properties:
-                data:
+              properties: 
+                data: 
                   $ref: "#/definitions/User"
-          400:
+          400: 
             description: "Bad request"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-          401:
+          401: 
             description: "Unauthorized"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-          404:
+          404: 
             description: "Item not found"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-    /users/contacts:
+    /users/contacts: 
       x-swagger-router-controller: "features/users/controllers/contacts"
-      post:
-        security:
-          -
+      post: 
+        security: 
+          - 
             jwtAuth: []
         description: "add a new contact"
         summary: "add a new contact for the logged in user"
-        consumes:
+        consumes: 
           - "application/json"
         operationId: "addContact"
-        tags:
+        tags: 
           - "contacts"
-        parameters:
-          -
+        parameters: 
+          - 
             name: "contact"
             in: "body"
             description: "Contact to be added"
             required: true
-            schema:
-              required:
+            schema: 
+              required: 
                 - "email"
                 - "surName"
                 - "name"
-              properties:
-                email:
+              properties: 
+                email: 
                   type: "string"
-                surName:
+                surName: 
                   type: "string"
-                name:
+                name: 
                   type: "string"
-        responses:
-          200:
+        responses: 
+          200: 
             description: "Success"
-            schema:
-              required:
+            schema: 
+              required: 
                 - "data"
-              properties:
-                data:
+              properties: 
+                data: 
                   $ref: "#/definitions/Contact"
-          400:
+          400: 
             description: "Bad request"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-          401:
+          401: 
             description: "Unauthorized"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-          403:
+          403: 
             description: "Forbidden"
-            schema:
+            schema: 
               $ref: "#/definitions/ErrorResponse"
-    /swagger:
+    /swagger: 
       x-swagger-pipe: "swagger_raw"
-  definitions:
-    Error:
-      properties:
-        message:
+  definitions: 
+    Error: 
+      properties: 
+        message: 
           type: "string"
-    ErrorResponse:
-      properties:
-        error:
+    ErrorResponse: 
+      properties: 
+        error: 
           $ref: "#/definitions/Error"
-    User:
-      properties:
-        _id:
+    User: 
+      properties: 
+        _id: 
           type: "string"
-        email:
+        email: 
           type: "string"
-        password:
+        password: 
           type: "string"
-        name:
+        name: 
           type: "string"
-    Contact:
-      properties:
-        _id:
+    Contact: 
+      properties: 
+        _id: 
           type: "string"
-        email:
+        email: 
           type: "string"
-        surName:
+        surName: 
           type: "string"
-        name:
+        name: 
           type: "string"
-  securityDefinitions:
-    jwtAuth:
+  securityDefinitions: 
+    jwtAuth: 
       type: "apiKey"
       name: "Authorization"
       in: "header"
